# desktop-buddy

./: .gitignore  CMakeLists.txt  Pet.cpp  Pet.h  SConstruct  main.cpp
extension/src/: register_types.cpp  tray_src.h  virtualPet.cpp  virtualPet.h
game/: MainScene.tscn  export_presets.cfg  main.gd  project.godot  test_config.json
game/resources/: default_theme.tres
game/scripts/: Globals.gd  MainScene.gd  Pet.gd  SettingsPopUp.gd
